--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,10 @@
 				// window.location.href = '/demo/picture/website/pcguide.html';
 			}</script><script>document.addEventListener('DOMContentLoaded', function() {
 				document.documentElement.style.fontSize = document.documentElement.clientWidth / 20 + 'px'
-			})</script><link rel=stylesheet href=/demo/picture/website/static/index.css></head><body><noscript><strong>Please enable JavaScript to continue.</strong></noscript><div id=app></div><script>var _hmt = _hmt || [];
+			})</script><link rel=stylesheet href=/static/index.css></head><body><noscript><strong>Please enable JavaScript to continue.</strong></noscript><div id=app></div><script>var _hmt = _hmt || [];
 			(function() {
 				var hm = document.createElement("script");
 				hm.src = "https://hm.baidu.com/hm.js?fe3b7a223fc08c795f0f4b6350703e6f";
 				var s = document.getElementsByTagName("script")[0];
 				s.parentNode.insertBefore(hm, s);
-			})();</script><script src=/demo/picture/website/static/js/chunk-vendors.7e546db1.js></script><script src=/demo/picture/website/static/js/index.258154e8.js></script></body></html>
+			})();</script><script src=/static/js/chunk-vendors.7e546db1.js></script><script src=/static/js/index.7f6ef2ed.js></script></body></html>
